@@ -23,7 +23,6 @@ classifiers =
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: POSIX
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -36,11 +35,10 @@ project_urls =
 
 [options]
 packages = find:
-python_version = >=3.6
+python_version = >=3.7
 install_requires =
     lxml
 tests_require =
-    importlib-resources;python_version<'3.7'
     pytest
 
 [options.entry_points]
